--- a/front/package.json
+++ b/front/package.json
@@ -10,14 +10,23 @@
     "type": "git",
     "url": "git+https://github.com/punkryn/IPM.git"
   },
-  "author": "punkryn",
+  "author": "Punkryn",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/punkryn/IPM/issues"
   },
   "homepage": "https://github.com/punkryn/IPM#readme",
   "dependencies": {
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.0"
   }
 }
