--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,9 @@
   "description": "integrated password management",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack"
   },
   "repository": {
     "type": "git",
@@ -17,16 +19,34 @@
   },
   "homepage": "https://github.com/punkryn/IPM#readme",
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-refresh": "^0.11.0",
+    "style-loader": "^3.3.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/node": "^16.11.11",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.5.0",
+    "babel-loader": "^8.2.3",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.0"
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
+    "prettier": "^2.5.0",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   }
 }
