--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "style-loader": "^3.3.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
@@ -37,6 +39,8 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@types/node": "^16.11.11",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.5.0",
     "babel-loader": "^8.2.3",
