--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/punkryn/IPM#readme",
   "dependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@loadable/component": "^5.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
@@ -38,6 +42,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.11",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
