--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "react": "^17.0.2",
