--- a/back/package.json
+++ b/back/package.json
@@ -7,13 +7,22 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^15.3.0",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^15.14.9",
+    "@types/validator": "^13.7.0",
     "prettier": "^2.2.1",
     "tsc": "^2.0.3",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "nunjucks": "^3.2.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.12.0-alpha.1",
+    "sequelize-cli": "^6.3.0",
+    "sequelize-typescript": "^2.1.1"
   }
 }
