--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -2,6 +2,7 @@
 
 {
   "compilerOptions": {
+    "esModuleInterop": true,
     "strict": true,
     "module": "commonjs",
     "declaration": true,
@@ -12,8 +13,7 @@
     "target": "ES6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "incremental": true
-  },
-  "include": ["src/**/*"]
+  }
 }
