--- a/back/package.json
+++ b/back/package.json
@@ -11,18 +11,21 @@
     "@types/node": "^15.14.9",
     "@types/validator": "^13.7.0",
     "prettier": "^2.2.1",
+    "ts-node": "^10.4.0",
     "tsc": "^2.0.3",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nunjucks": "^3.2.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.12.0-alpha.1",
-    "sequelize-cli": "^6.3.0",
-    "sequelize-typescript": "^2.1.1"
+    "sequelize-cli": "^6.3.0"
   }
 }
