--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
     "start": "node dist/app.js"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^15.14.9",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
