--- a/back/package.json
+++ b/back/package.json
@@ -7,9 +7,12 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/morgan": "^1.9.3",
     "@types/node": "^15.14.9",
+    "@types/passport": "^1.0.7",
     "@types/validator": "^13.7.0",
     "prettier": "^2.2.1",
     "ts-node": "^10.4.0",
@@ -20,12 +23,16 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nunjucks": "^3.2.3",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.12.0-alpha.1",
     "sequelize-cli": "^6.3.0"
