--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "style-loader": "^3.3.1",
+    "swr": "^1.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
