--- a/front/package.json
+++ b/front/package.json
@@ -24,11 +24,13 @@
     "@emotion/styled": "^11.6.0",
     "@loadable/component": "^5.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "gravatar": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
