--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "gravatar": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-refresh": "^0.11.0",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
