--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/hpp": "^0.2.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^15.14.9",
     "@types/passport": "^1.0.7",
@@ -30,6 +31,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nunjucks": "^3.2.3",
